refined and updated

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Learn about Ameer Muavia Shah - Software Engineer with 5+ years of experience in ERPNext, Frappe Framework, and Python automation." />
+  <meta name="robots" content="index, follow" />
+  <meta name="description" content="Learn about Ameer Muavia Shah - Senior Software Engineer with 5+ years of experience in ERPNext, Frappe Framework, and Python automation." />
   <title>About | Ameer Muavia Shah</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -65,13 +66,13 @@
       <h1 class="text-4xl sm:text-5xl font-bold mb-8 text-emerald-400">About Me</h1>
       <div class="space-y-6 text-gray-300 leading-relaxed">
         <p class="text-lg">
-          I'm a Software Engineer specializing in <strong class="text-emerald-400 font-semibold">ERPNext</strong> and <strong class="text-emerald-400 font-semibold">Frappe Framework</strong>, with <strong class="text-emerald-400 font-semibold">5+ years</strong> of experience building enterprise-grade ERP solutions across construction, healthcare, and manufacturing sectors.
+          I'm a dedicated <b>Senior Software Engineer</b> specializing in the <b>Frappe Framework</b> and <b>ERPNext</b>, with over <b>5 years</b> of hands-on experience in building robust, customized Enterprise Resource Planning (ERP) solutions. My expertise lies in Python back-end development, full-stack Frappe app creation, <b>client requirements gathering</b>, and transforming complex business needs into functional systems across sectors like healthcare and real estate.
         </p>
         <p class="text-lg">
-          I design and implement complete systems — from workflows, reporting dashboards, and data automation to API integrations — delivering scalable, maintainable, and secure ERP environments.
+          I pride myself on transforming raw business requirements into functional, scalable, and maintainable ERP systems. This involves everything from designing optimized database schemas (SQL/MariaDB) and <b>streamlined approval workflows</b> to creating performance-driven API integrations and providing guidance to junior developers. My career progression from Associate to Senior Engineer across multiple firms highlights my dedication to solving enterprise-level challenges efficiently.
         </p>
         <p class="text-lg">
-          Outside of work, I love exploring automotive builds, watching anime, and spending time with my two daughters, <strong class="text-emerald-400 font-semibold">Rumaisa</strong> and <strong class="text-emerald-400 font-semibold">Furia'h</strong>.
+          I am passionate about creating effective system workflows, from initial conceptual design (like CRM flow in Visio) to final implementation, ensuring a seamless user experience (UI/UX).
         </p>
       </div>
     </section>
@@ -87,15 +88,15 @@
           <ul class="space-y-2.5 text-gray-400">
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>ERPNext</span>
+              <span>ERPNext (Customization & Implementation)</span>
             </li>
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>Frappe Framework</span>
+              <span>Frappe Framework (Full Stack App Dev)</span>
             </li>
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>Custom ERP Development</span>
+              <span>Custom Module Development & Testing</span>
             </li>
           </ul>
         </div>
@@ -107,15 +108,15 @@
           <ul class="space-y-2.5 text-gray-400">
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>Python</span>
+              <span>Python (Flask, FastAPI, Data Tools)</span>
             </li>
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>JavaScript</span>
+              <span>JavaScript (Vanilla, jQuery) & Front-End</span>
             </li>
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>API Development</span>
+              <span>SQL (<b>MariaDB</b>, PostgreSQL, MySQL)</span>
             </li>
           </ul>
         </div>
@@ -127,15 +128,15 @@
           <ul class="space-y-2.5 text-gray-400">
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>Automation & Integration</span>
+              <span><b>Client Requirements Analysis & UX</b></span>
             </li>
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>Workflow Design</span>
+              <span>Automation, API Integration & Workflow Design</span>
             </li>
             <li class="flex items-center gap-2">
               <span class="text-emerald-400">▸</span>
-              <span>Data Analytics</span>
+              <span><b>Jinja Templating</b> & Custom Reporting</span>
             </li>
           </ul>
         </div>
