--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
   <meta name="description" content="Get in touch with Ameer Muavia Shah - Software Engineer specializing in ERPNext and Frappe Framework. Open to freelance work and collaborations." />
   <title>Contact | Ameer Muavia Shah</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -68,10 +69,10 @@
       </p>
 
       <div class="grid sm:grid-cols-3 gap-6 mb-12">
-        <a href="mailto:maveeshah@gmail.com" class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 group">
+        <a href="mailto:mavee.shah@hotmail.com" class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 group">
           <div class="text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">📧</div>
           <h3 class="text-lg font-semibold mb-2 text-emerald-400 group-hover:text-emerald-300 transition-colors">Email</h3>
-          <p class="text-sm text-gray-400 break-all">maveeshah@gmail.com</p>
+          <p class="text-sm text-gray-400 break-all">mavee.shah@hotmail.com</p>
         </a>
 
         <a href="https://github.com/maveeshah" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 group">
@@ -83,7 +84,7 @@
         <a href="https://linkedin.com/in/maveeshah" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 group">
           <div class="text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">🌐</div>
           <h3 class="text-lg font-semibold mb-2 text-emerald-400 group-hover:text-emerald-300 transition-colors">LinkedIn</h3>
-          <p class="text-sm text-gray-400">linkedin.com/in/maveeshah</p>
+          <p class="text-sm text-gray-400">linkedin.com/in/ameer-muavia-shah</p>
         </a>
       </div>
 
