--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ameer Muavia Shah - Software Engineer specializing in ERPNext, Frappe Framework, and Python automation. 5+ years of experience building enterprise ERP solutions." />
-  <meta name="keywords" content="Software Engineer, ERPNext, Frappe, Python, ERP, Automation, Integration" />
+  <meta name="robots" content="index, follow" />
+  <meta name="description" content="Ameer Muavia Shah - Senior Software Engineer specializing in ERPNext, Frappe Framework, and Python automation. 5+ years of experience building enterprise ERP solutions." />
+  <meta name="keywords" content="Software Engineer, ERPNext, Frappe, Python, ERP, Automation, Integration, MariaDB, Jinja" />
   <meta name="author" content="Ameer Muavia Shah" />
-  <title>Ameer Muavia Shah | Software Engineer | ERPNext & Frappe Specialist</title>
+  <title>Ameer Muavia Shah | Senior Software Engineer | ERPNext & Frappe Specialist</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -96,14 +97,14 @@
       <div class="relative z-10 max-w-4xl fade-in-on-scroll">
         <div class="mb-8 animate-slide-up">
           <div class="inline-block px-4 py-2 bg-emerald-500/10 border border-emerald-500/20 rounded-full mb-6">
-            <span class="text-emerald-400 text-sm font-medium">Software Engineer & ERPNext Specialist</span>
+            <span class="text-emerald-400 text-sm font-medium">Senior Software Engineer & ERPNext Specialist (5+ Yrs)</span>
           </div>
         </div>
         <h1 class="text-5xl sm:text-6xl md:text-7xl font-bold mb-6 leading-tight animate-slide-up">
           Hi, I'm <span class="text-emerald-400 bg-gradient-to-r from-emerald-400 via-teal-400 to-emerald-500 bg-clip-text text-transparent">Ameer Muavia Shah</span>
         </h1>
         <p class="text-xl sm:text-2xl text-gray-300 mb-4 animate-slide-up" style="animation-delay: 0.2s">
-          Software Engineer
+          Senior Software Engineer
         </p>
         <p class="text-lg sm:text-xl text-gray-400 mb-12 animate-slide-up" style="animation-delay: 0.4s">
           Frappe & ERPNext Specialist | Python | Automation & Integration Expert
@@ -112,12 +113,44 @@
           <a href="projects.html" class="px-8 py-3.5 bg-emerald-500 text-black font-semibold rounded-full hover:bg-emerald-400 hover:scale-105 transition-all shadow-lg shadow-emerald-500/30 hover:shadow-emerald-500/50">
             View My Work
           </a>
-          <a href="contact.html" class="px-8 py-3.5 border-2 border-emerald-400 text-emerald-400 font-semibold rounded-full hover:bg-emerald-400 hover:text-black transition-all hover:scale-105">
-            Get in Touch
+          <a href="https://linkedin.com/in/maveeshah" target="_blank" rel="noopener noreferrer" class="px-8 py-3.5 border-2 border-emerald-400 text-emerald-400 font-semibold rounded-full hover:bg-emerald-400 hover:text-black transition-all hover:scale-105">
+            Connect on LinkedIn
           </a>
         </div>
       </div>
     </section>
+
+    <section class="max-w-7xl mx-auto py-12 sm:py-20 px-6 fade-in-on-scroll">
+      <div class="text-center mb-12">
+        <div class="inline-block px-4 py-2 bg-emerald-500/10 border border-emerald-500/20 rounded-full mb-6">
+          <span class="text-emerald-400 text-sm font-medium">Core Expertise</span>
+        </div>
+        <h2 class="text-3xl sm:text-4xl font-bold text-emerald-400">My Technology Stack</h2>
+      </div>
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
+        <div class="bg-gradient-to-br from-gray-900/90 to-gray-800/90 p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 transition-all hover:-translate-y-1">
+          <span class="text-4xl mb-3 block">💻</span>
+          <h3 class="text-lg font-semibold text-gray-200">ERPNext / Frappe</h3>
+          <p class="text-sm text-gray-400">Custom App & Module Development</p>
+        </div>
+        <div class="bg-gradient-to-br from-gray-900/90 to-gray-800/90 p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 transition-all hover:-translate-y-1">
+          <span class="text-4xl mb-3 block">🐍</span>
+          <h3 class="text-lg font-semibold text-gray-200">Python</h3>
+          <p class="text-sm text-gray-400">Automation, Scripting & Back-end APIs</p>
+        </div>
+        <div class="bg-gradient-to-br from-gray-900/90 to-gray-800/90 p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 transition-all hover:-translate-y-1">
+          <span class="text-4xl mb-3 block">🔗</span>
+          <h3 class="text-lg font-semibold text-gray-200">API Integration</h3>
+          <p class="text-sm text-gray-400">REST, OAuth2 & Third-Party System Sync</p>
+        </div>
+        <div class="bg-gradient-to-br from-gray-900/90 to-gray-800/90 p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 transition-all hover:-translate-y-1">
+          <span class="text-4xl mb-3 block">📊</span>
+          <h3 class="text-lg font-semibold text-gray-200">SQL / MariaDB</h3>
+          <p class="text-sm text-gray-400">Schema Design & Optimization</p>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer class="text-center py-8 border-t border-gray-800 text-sm text-gray-500">
