--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
   <meta name="description" content="Featured projects by Ameer Muavia Shah - ERPNext healthcare platforms, real estate ERP systems, and Python automation solutions." />
   <title>Projects | Ameer Muavia Shah</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -80,75 +81,15 @@
       </div>
       <h1 class="text-4xl sm:text-5xl font-bold mb-4 text-emerald-400 text-center">Featured Projects</h1>
       <p class="text-gray-400 text-center mb-12 max-w-2xl mx-auto">
-        Enterprise-grade ERP solutions and automation tools built with ERPNext, Frappe Framework, and Python.
+        Enterprise-grade ERP solutions and automation tools built with ERPNext, Frappe Framework, and Python. Click a card to view detailed results.
       </p>
 
-      <!-- <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
-        <div class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 fade-in-on-scroll group cursor-pointer" data-project="grow-healthy">
-          <div class="mb-4">
-            <div class="w-14 h-14 bg-gradient-to-br from-emerald-500/20 to-teal-500/20 rounded-xl flex items-center justify-center mb-4 group-hover:scale-110 transition-transform duration-300">
-              <span class="text-3xl">🏥</span>
-            </div>
-            <h3 class="text-xl font-semibold mb-3 text-emerald-400 group-hover:text-emerald-300 transition-colors">Grow Healthy Platform</h3>
-          </div>
-          <p class="text-gray-400 text-sm mb-4 leading-relaxed">
-            ERPNext-based healthcare ERP for research institutes, with admin dashboards and patient health tracking modules.
-          </p>
-          <div class="flex flex-wrap gap-2 mb-4">
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">ERPNext</span>
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">Healthcare</span>
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">Dashboards</span>
-          </div>
-          <button class="text-emerald-400 text-sm font-medium hover:text-emerald-300 transition-colors inline-flex items-center gap-2 group-hover:gap-3">
-            View Project <span class="text-lg">→</span>
-          </button>
+      <div id="projects-container" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
         </div>
-
-        <div class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 fade-in-on-scroll group cursor-pointer" data-project="real-estate" style="animation-delay: 0.1s">
-          <div class="mb-4">
-            <div class="w-14 h-14 bg-gradient-to-br from-emerald-500/20 to-teal-500/20 rounded-xl flex items-center justify-center mb-4 group-hover:scale-110 transition-transform duration-300">
-              <span class="text-3xl">🏢</span>
-            </div>
-            <h3 class="text-xl font-semibold mb-3 text-emerald-400 group-hover:text-emerald-300 transition-colors">Real Estate ERP</h3>
-          </div>
-          <p class="text-gray-400 text-sm mb-4 leading-relaxed">
-            Custom Frappe app for property management, project accounting, and approval workflows.
-          </p>
-          <div class="flex flex-wrap gap-2 mb-4">
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">Frappe</span>
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">Real Estate</span>
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">Workflows</span>
-          </div>
-          <button class="text-emerald-400 text-sm font-medium hover:text-emerald-300 transition-colors inline-flex items-center gap-2 group-hover:gap-3">
-            View Project <span class="text-lg">→</span>
-          </button>
-        </div>
-
-        <div class="bg-gradient-to-br from-gray-900/90 via-gray-900/80 to-gray-800/90 backdrop-blur-sm p-6 rounded-2xl border border-gray-800/50 hover:border-emerald-500/50 hover:shadow-2xl hover:shadow-emerald-500/10 transition-all duration-300 hover:-translate-y-2 fade-in-on-scroll group cursor-pointer" data-project="automation" style="animation-delay: 0.2s">
-          <div class="mb-4">
-            <div class="w-14 h-14 bg-gradient-to-br from-emerald-500/20 to-teal-500/20 rounded-xl flex items-center justify-center mb-4 group-hover:scale-110 transition-transform duration-300">
-              <span class="text-3xl">⚙️</span>
-            </div>
-            <h3 class="text-xl font-semibold mb-3 text-emerald-400 group-hover:text-emerald-300 transition-colors">Automation Suite</h3>
-          </div>
-          <p class="text-gray-400 text-sm mb-4 leading-relaxed">
-            Python-based automation toolkit integrated with ERPNext to streamline repetitive admin and HR tasks.
-          </p>
-          <div class="flex flex-wrap gap-2 mb-4">
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">Python</span>
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">Automation</span>
-            <span class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 text-emerald-400 text-xs rounded-full font-medium">Integration</span>
-          </div>
-          <button class="text-emerald-400 text-sm font-medium hover:text-emerald-300 transition-colors inline-flex items-center gap-2 group-hover:gap-3">
-            View Project <span class="text-lg">→</span>
-          </button>
-        </div>
-      </div> -->
     </section>
   </main>
 
-  <!-- Project Modal -->
-  <div id="project-modal" class="fixed inset-0 z-50 hidden items-center justify-center p-4 bg-black/80 backdrop-blur-sm">
+  <div id="project-modal" class="fixed inset-0 z-50 hidden items-center justify-center p-4 bg-black/80 backdrop-blur-sm transition-opacity duration-300">
     <div class="bg-gradient-to-br from-gray-900 via-gray-900 to-gray-800 rounded-2xl border border-gray-800 max-w-4xl w-full max-h-[90vh] overflow-y-auto shadow-2xl modal-content">
       <div class="sticky top-0 bg-gray-900/95 backdrop-blur-sm border-b border-gray-800 px-6 py-4 flex justify-between items-center">
         <h2 id="modal-title" class="text-2xl font-bold text-emerald-400"></h2>
