Revamp portfolio website with updated meta descriptions and keywords for improved SEO. Refine animations and transitions for smoother user experience. Enhance navigation links for better accessibility and consistency across pages. Implement contact form functionality with email handling and user feedback. Add new sections highlighting proven results and services offered, emphasizing automation expertise.

--- a/projects.html
+++ b/projects.html
@@ -418,11 +418,15 @@
           Projects
           <span class="absolute -bottom-1 left-0 w-full h-0.5 bg-emerald-400"></span>
         </a>
-        <a href="about.html" class="hover:text-emerald-400 transition-colors relative group">
-          About
+        <a href="index.html#outcomes" class="hover:text-emerald-400 transition-colors relative group">
+          Results
           <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-emerald-400 group-hover:w-full transition-all duration-300"></span>
         </a>
-        <a href="contact.html" class="hover:text-emerald-400 transition-colors relative group">
+        <a href="index.html#services" class="hover:text-emerald-400 transition-colors relative group">
+          Services
+          <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-emerald-400 group-hover:w-full transition-all duration-300"></span>
+        </a>
+        <a href="index.html#contact" class="hover:text-emerald-400 transition-colors relative group">
           Contact
           <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-emerald-400 group-hover:w-full transition-all duration-300"></span>
         </a>
@@ -442,8 +446,9 @@
       <div class="flex flex-col px-4 py-4 space-y-3">
         <a href="index.html" class="text-gray-300 hover:text-emerald-400 transition-colors py-2 px-3 rounded-lg hover:bg-gray-800/50">Home</a>
         <a href="projects.html" class="text-gray-300 hover:text-emerald-400 transition-colors active py-2 px-3 rounded-lg hover:bg-gray-800/50">Projects</a>
-        <a href="about.html" class="text-gray-300 hover:text-emerald-400 transition-colors py-2 px-3 rounded-lg hover:bg-gray-800/50">About</a>
-        <a href="contact.html" class="text-gray-300 hover:text-emerald-400 transition-colors py-2 px-3 rounded-lg hover:bg-gray-800/50">Contact</a>
+        <a href="index.html#outcomes" class="text-gray-300 hover:text-emerald-400 transition-colors py-2 px-3 rounded-lg hover:bg-gray-800/50">Results</a>
+        <a href="index.html#services" class="text-gray-300 hover:text-emerald-400 transition-colors py-2 px-3 rounded-lg hover:bg-gray-800/50">Services</a>
+        <a href="index.html#contact" class="text-gray-300 hover:text-emerald-400 transition-colors py-2 px-3 rounded-lg hover:bg-gray-800/50">Contact</a>
         <button id="mobile-theme-toggle" aria-label="Toggle theme" class="flex items-center gap-2 text-gray-300 hover:text-emerald-400 transition-colors py-2 px-3 rounded-lg hover:bg-gray-800/50 text-left">
           <span id="mobile-theme-icon" class="text-xl">🌙</span>
           <span>Toggle Theme</span>
